#3 - Lots Of Work Done

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -1,3 +1,17 @@
+<header>
+    <a href="" id="logo">TYPO</a>
+</header>
+<div class="divider"></div>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
+<div class="divider"></div>
+<footer>
+   <span class="footer-content">@ 2022 Dimitris Kidis, Inc.</span>
+</footer>
+
 
 
 
