--- a/test-app/src/app/app.component.scss
+++ b/test-app/src/app/app.component.scss
@@ -2,3 +2,55 @@ table {
     width: 30%;
     text-align: center;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#logo {
+    padding: 15px;
+    margin-top: 20px;
+    
+    text-align: center;
+    color: #3d3d3d;
+    font-weight: 700;
+    font-size: 60px;
+    text-decoration: none;
+}
+
+.divider {
+    border-top: 1px solid #c4c4c4;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+footer {
+    
+    // padding-top: 40px;
+    padding-bottom: 40px;
+
+    text-align: center;
+}
+
+.footer-content {
+    width: auto;
+    transition: background 0.4s;
+    padding: 7px;
+    border-radius: 10px;
+}
+
+.footer-content:hover {
+    background: rgba(0, 0, 0, 0.11);
+    
+    cursor: pointer;
+
+}
