#5 - Components Separated, LeaderList Finished

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -1,16 +1,10 @@
-<header>
-    <a href="" id="logo">TYPO</a>
-</header>
-<div class="divider"></div>
+<app-main-header></app-main-header>
 
 <div class="container">
     <router-outlet></router-outlet>
 </div>
 
-<div class="divider"></div>
-<footer>
-   <span class="footer-content">@ 2022 Dimitris Kidis, Inc.</span>
-</footer>
+<app-main-footer></app-main-footer>
 
 
 
