#6 - Uploading Feature Added

--- a/test-app/src/app/components/account/account.component.html
+++ b/test-app/src/app/components/account/account.component.html
@@ -13,3 +13,5 @@
            totam consequuntur atque fugiat, eligendi praesentium,
             ducimus esse id neque voluptatibus illum alias 
             voluptatem corrupti ex reiciendis! Iusto!</div>
+
+            <app-upload-image></app-upload-image>
