#8 - VK & Telegram APIs Added; Chart.js Added

--- a/test-app/src/app/components/account/account.component.html
+++ b/test-app/src/app/components/account/account.component.html
@@ -1,17 +1,19 @@
-<p>account works!</p>
-<div>Lorem ipsum dolor, sit amet consectetur adipisicing
-     elit. Fugiat mollitia non adipisci corrupti 
-     perspiciatis sint nostrum recusandae. Illo molestias 
-     qui nobis et autem consectetur sit facilis est incidunt
-      recusandae. Cum accusamus maiores nesciunt perspiciatis
-       accusantium, laborum sequi dignissimos provident 
-       facere aspernatur illo, repudiandae consequuntur
-        odit saepe. Ea nobis iusto ullam, corrupti iure 
-        minima aliquam totam, praesentium, voluptatem debitis
-         assumenda libero? Perferendis enim aperiam suscipit
-          aliquid provident sunt aut nemo, earum modi inventore
-           totam consequuntur atque fugiat, eligendi praesentium,
-            ducimus esse id neque voluptatibus illum alias 
-            voluptatem corrupti ex reiciendis! Iusto!</div>
 
-            <app-upload-image></app-upload-image>
+<div class="container">     
+     <div class="first">
+          <div class="bio">
+               <app-bio></app-bio>
+          </div>
+          <div class="text-part">
+               <app-description></app-description>
+          </div>
+     </div>
+     <div class="chart">
+          <app-chart></app-chart>
+     </div>
+</div>
+
+
+
+
+
