--- a/test-app/src/app/components/leaderboard/leaderboard.component.html
+++ b/test-app/src/app/components/leaderboard/leaderboard.component.html
@@ -15,10 +15,11 @@
 
 <div class="share">
     <span>Help others to know us better</span>
-    <div class="icons">
+    <!-- <div class="icons">
         <span><img src="https://typostorage.blob.core.windows.net/avatars/telegram-icone-icon.png" alt="Share Via Telegram"></span>
         <span><img src="https://typostorage.blob.core.windows.net/avatars/VK_Compact_Logo_(2021-present).svg.png" alt="Share Via VK"></span>
-    </div>
+    </div> -->
+    <app-socials></app-socials>
 </div>
 
 <app-leader-list></app-leader-list>
