--- a/test-app/src/app/components/account/account.component.scss
+++ b/test-app/src/app/components/account/account.component.scss
@@ -9,10 +9,22 @@
 
 .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.first {
+    display: flex;
     flex-direction: row;
     justify-content: center;
     padding-left: 150px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
+
+.chart {
+    margin: 0 auto;
+    text-align: center;
+}
 
