--- a/test-app/src/app/components/main-header/main-header.component.html
+++ b/test-app/src/app/components/main-header/main-header.component.html
@@ -1,16 +1,48 @@
-<header>
+<header *ngIf="!account; else elseBlock"> <!-- *ngIf="!account; else elseBlock" -->
     <div style="text-align: left;" *ngIf="isLoggedIn" id="nav-menu" class="point">
         <a href="" class="arrow">
-            <img src="https://typostorage.blob.core.windows.net/avatars/arrow.svg" alt="">
+            <img #arrow src="https://typostorage.blob.core.windows.net/avatars/arrow.svg" alt="">
         </a>
-        <a id="menu">
+        <a #menu id="menu">
             Menu
         </a>
     </div>
+
+
+
     <a href="" id="logo" class="point">TYPO</a>
-    <div [routerLink]="['/typo/account']" style="text-align: right;" *ngIf="isLoggedIn" id="nav-menu" class="point">
-            <img src="{{user.avatar}}" id="nav-user-avatar" alt="me"/>
-            <span id="nav-user-name">Hello, {{user.firstName}}!</span>
+
+
+
+
+    <div #avatar style="text-align: right;" *ngIf="isLoggedIn" id="nav-menu" class="point">
+            <img (click)="goForward()" [routerLink]="['/typo/account']" src="{{user.avatar}}" id="nav-user-avatar" alt="me"/>
+            <span (click)="goForward()" [routerLink]="['/typo/account']" id="nav-user-name">Hello, {{user.firstName}}!</span>
     </div>
 </header>
-<div class="divider"></div>
+
+
+<ng-template #elseBlock>
+    <header> <!-- *ngIf="!account; else elseBlock" -->
+        <div class="go-back" style="text-align: left;" *ngIf="isLoggedIn" id="nav-menu" class="point">
+            <a (click)="goBack()" [routerLink]="['/typo/main']" href="" class="arrow">
+                <img (click)="goBack()" class="horizontal-arrow" style="transform: rotate(90deg);" [routerLink]="['/typo/main']" #arrow src="https://typostorage.blob.core.windows.net/avatars/arrow.svg" alt="">
+            </a>
+            <a (click)="goBack()" class="go-back-text" [routerLink]="['/typo/main']" #menu id="menu">
+                Go Back
+            </a>
+        </div>
+    
+    
+    
+        <a href="" id="logo" class="point">TYPO</a>
+    
+    
+    
+    
+        <div #avatar [routerLink]="['/typo/account']" style="text-align: right;" *ngIf="isLoggedIn" id="nav-menu" class="point">
+                <span id="nav-user-name" style="color: #f85149;" (click)="signOut()">Sign Out</span>
+        </div>
+    </header> 
+</ng-template>
+<app-divider></app-divider>
