--- a/test-app/src/styles.scss
+++ b/test-app/src/styles.scss
@@ -16,3 +16,8 @@ html, body { height: 100%; }
 .material-icons{
     font-family: 'Material Icons' !important;
 }
+
+
+.mat-dialog-container {
+    width: 500px !important;
+}
