--- a/test-app/src/app/components/main-header/main-header.component.html
+++ b/test-app/src/app/components/main-header/main-header.component.html
@@ -1,6 +1,11 @@
-<header *ngIf="!account; else elseBlock"> <!-- *ngIf="!account; else elseBlock" -->
-    <div style="text-align: left;" *ngIf="isLoggedIn" id="nav-menu" class="point">
-        <a href="" class="arrow">
+<header> <!-- *ngIf="!account; else elseBlock" -->
+    <div 
+        style="text-align: left;"
+        *ngIf="isLoggedIn"
+        id="nav-menu"
+        class="point menu-div"
+        mat-button (click)="openMenu()">
+        <a class="arrow">
             <img #arrow src="https://typostorage.blob.core.windows.net/avatars/arrow.svg" alt="">
         </a>
         <a #menu id="menu">
@@ -16,14 +21,14 @@
 
 
     <div #avatar style="text-align: right;" *ngIf="isLoggedIn" id="nav-menu" class="point">
-            <img (click)="goForward()" [routerLink]="['/typo/account']" src="{{user.avatar}}" id="nav-user-avatar" alt="me"/>
-            <span (click)="goForward()" [routerLink]="['/typo/account']" id="nav-user-name">Hello, {{user.firstName}}!</span>
+            <img [routerLink]="['/typo/account']" src="{{user.avatar}}" id="nav-user-avatar" alt="me"/>
+            <span [routerLink]="['/typo/account']" id="nav-user-name">Hello, {{user.firstName}}!</span>
     </div>
 </header>
 
 
-<ng-template #elseBlock>
-    <header> <!-- *ngIf="!account; else elseBlock" -->
+<!-- <ng-template #elseBlock>
+    <header> 
         <div class="go-back" style="text-align: left;" *ngIf="isLoggedIn" id="nav-menu" class="point">
             <a (click)="goBack()" [routerLink]="['/typo/main']" href="" class="arrow">
                 <img (click)="goBack()" class="horizontal-arrow" style="transform: rotate(90deg);" [routerLink]="['/typo/main']" #arrow src="https://typostorage.blob.core.windows.net/avatars/arrow.svg" alt="">
@@ -44,5 +49,5 @@
                 <span id="nav-user-name" style="color: #f85149;" (click)="signOut()">Sign Out</span>
         </div>
     </header> 
-</ng-template>
+</ng-template> -->
 <app-divider></app-divider>
