#11 - FirstScreen: TextBox Added; Input, Bar Added

--- a/test-app/src/app/components/main/main.component.html
+++ b/test-app/src/app/components/main/main.component.html
@@ -1,1 +1,6 @@
-<p>main works!</p>
+<div class="container">
+    <!-- NAVIGATION -->
+    <div class="firstscreen">
+        <app-firstscreen></app-firstscreen>
+    </div>
+</div>
