#12 - Engine + Keyboard Added!!!!!!!!!!!!!!!!!!!!

--- a/test-app/src/app/components/leaderboard/leaderboard.component.html
+++ b/test-app/src/app/components/leaderboard/leaderboard.component.html
@@ -1,15 +1,15 @@
 <div class="avg-wrapper">
     <div class="card card-speed">
         <div class="avg-name">Average Speed</div>
-        <div #avgSpeed class="avg-data">{{stats.avgSymbolsPerMin}}</div>
+        <div #avgSpeed class="avg-data">{{stats?.avgSymbolsPerMin}}</div>
     </div>
     <div class="card card-accuracy">
         <div class="avg-name">Average Accuracy</div>
-        <div #avgAccuracy class="avg-data">{{stats.avgAccuracy}}%</div>
+        <div #avgAccuracy class="avg-data">{{stats?.avgAccuracy}}%</div>
     </div>
     <div class="card card-time">
         <div class="avg-name">Average Time</div>
-        <div #avgTime class="avg-data">{{stats.avgTime}}</div>
+        <div #avgTime class="avg-data">{{stats?.avgTime}}</div>
     </div>
 </div>
 
