--- a/test-app/src/app/components/main/keyboard/keyboard.component.html
+++ b/test-app/src/app/components/main/keyboard/keyboard.component.html
@@ -1,5 +1,5 @@
 <!-- Keyboard-ru -->
-<div class="keyboard-wrapper" >
+<div class="keyboard-wrapper">
     <div class="keyboard">
         <div class="triggers">
             <svg width="22" height="22" class="trigger" id="bucket-ru" #bucketHelper (click)="toggleBucket()" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -76,7 +76,7 @@
                 <img src="https://typostorage.blob.core.windows.net/avatars/little-finger-right-purple.svg" class="hand hidden" id="little-finger-right-purple-9" >
             </div>
             <div class="line">
-                <div class="caps" id="letter_capslock-1">Caps Lock</div>
+                <div class="caps" #caps id="letter_capslock-1">Caps Lock</div>
                 <div id="key-27">A</div>
                 <div id="key-28">S</div>
                 <div id="key-29">D</div>
