--- a/test-app/src/app/components/main-header/dialog/dialog.component.html
+++ b/test-app/src/app/components/main-header/dialog/dialog.component.html
@@ -1,5 +1,6 @@
 <div class="menu-container">
     <!-- <div class="menu-item"><a href="" [mat-dialog-close]="true" [routerLink]="['/typo/leaderboard']">Main</a></div> -->
+    <h1 class="header">Menu</h1>
     <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/main']" class="menu-item">Main</a>
     <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/account']" class="menu-item">Dashboard</a>
     <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/leaderboard']" class="menu-item">Leaderboard</a>
@@ -7,11 +8,15 @@
 </div>
 
 <style>
+
+    
     .menu-container {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        background-color: white;
+        color: #3d3d3d
     }
 
     a {
@@ -30,6 +35,8 @@
         padding-bottom: 10px;
         font-size: 16px;
         cursor: pointer;
+        color: #3d3d3d;
+        font-weight: 500;
         transition: background 0.25s;
     }
 
@@ -40,6 +47,11 @@
     .sign-out {
         color: #f85149;
         font-weight: 700;
+    }
+
+    .header {
+        font-size: 40px;
+        font-weight: 900;
     }
 
     
