--- a/test-app/src/app/components/socials/socials.component.scss
+++ b/test-app/src/app/components/socials/socials.component.scss
@@ -20,7 +20,7 @@
 img {
     width: 40px;
     height: 40px;
-    margin-left: 20px;
+    // margin-left: 20px;
     cursor: pointer;
     transition: all 0.3s ease;
     // transition: background 0.4s;
